--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,20 @@
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 # 响应页面默认后缀
 #spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=1
+spring.datasource.initial-size=1
+spring.datasource.validation-query=SELECT 1
+spring.datasource.test-on-borrow=false
+spring.datasource.test-while-idle=true
+spring.datasource.time-between-eviction-runs-millis=18800
+
+mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
+mybatis.type-aliases-package=com.wanye.entity
